--- a/SpeedoMeter/MainWindow.xaml
+++ b/SpeedoMeter/MainWindow.xaml
@@ -32,8 +32,8 @@
             </Ellipse.Fill>
         </Ellipse>
 
-        <Label x:Name="backSpeedLabel" Content="888" Foreground="#FF505050" HorizontalAlignment="Left" Margin="149,229,0,0" VerticalAlignment="Top" FontSize="26.667" FontFamily="/SpeedoMeter;component/#alarm clock"/>
-        <Label x:Name="speedLabel" Content="000" Foreground="#FFAEFF00" HorizontalAlignment="Left" Margin="149,229,0,0" VerticalAlignment="Top" FontSize="26.667" FontFamily="/SpeedoMeter;component/#alarm clock" />
+        <Label x:Name="backSpeedLabel" Content="888" Foreground="#FF505050" HorizontalAlignment="Left" Margin="149,229,0,0" VerticalAlignment="Top" FontSize="26.667" FontFamily="./src/#alarm clock"/>
+        <Label x:Name="speedLabel" Content="000" Foreground="#FFAEFF00" HorizontalAlignment="Left" Margin="149,229,0,0" VerticalAlignment="Top" FontSize="26.667" FontFamily="./src/#alarm clock" />
 
 
 
